--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "haversine-distance": "^1.2.1",
     "next": "13.0.5",
     "pigeon-maps": "^0.21.3",
     "react": "18.2.0",
