--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-geolocated": "^4.0.3",
+    "react-swipeable": "^7.0.0",
     "react-use-measure": "^2.1.1",
     "swr": "^1.3.0",
+    "ts-md5": "^1.3.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
